tests/errors/test_38.xpp
// No such enum or alias recognised

fn main() void {
	let x = What::bar;
	let y: foo::What;
}
